deployment.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami

spec:
  containers:
    - name: whoami
      image: containous/whoami:latest
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default

spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80

  selector:
    app: whoami

  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-middleware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /test
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /demo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/demo`)
      kind: Rule
      middlewares:
        - name: stripprefix
          namespace: default
      services:
        - name: whoami
          port: 80
